# CausalNeuroTwin

./: .env.example  .gitattributes  .gitignore  .phase03_diff.part00  .phase03_diff.part01  .phase03_diff.part02  .phase03_payload.part00  .phase03_payload.part01a  .phase03_payload.part01b  .phase03_payload.part01c  .phase03_payload.part01d  .phase03_payload.part02a  .phase03_payload.part02b  .phase03_payload.part03a  .phase03_payload.part03b  .phase03_payload.part04  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  NOTICE  PHASE_01_REPORT.md  PHASE_02_REPORT.md  PHASE_03_REPORT.md  README.md  REPOSITORY_FILE_MANIFEST.sha256  SECURITY.md  VALIDATION_RESULTS.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: apply-phase03-payload.yml  ci.yml
configs/: README.md  project.example.toml  run_contract.example.yaml
configs/data/: openneuro_ds004024.yaml
data/manifests/: ds004024_v1.0.1.registry.json
docs/: architecture.md  current-scope.md  data-policy.md  github-setup.md  hpc-development.md  index.md  run-contract.md
docs/datasets/: ds004024.md
hpc/: README.md  slurm_cpu_doctor.sbatch  slurm_gpu_doctor.sbatch
scripts/: bootstrap.sh  create_phase03_fixture.py  verify_repository.py
src/causalneurotwin/: __init__.py  __main__.py  _version.py  checksums.py  cli.py  config.py  datasets.py  doctor.py  forbidden_data.py  provenance.py  run_contract.py  serialization.py
tests/: test_build.py  test_checksums.py  test_cli.py  test_cli_phase02.py  test_cli_phase03.py  test_config.py  test_datasets.py  test_doctor.py  test_forbidden_data.py  test_package.py  test_provenance.py  test_run_contract.py
